--- a/diplom/diplomm/src/app/app.component.html
+++ b/diplom/diplomm/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="app-container">
+  <app-header></app-header>
+  <div class="main-content">
+    <app-chat-panel></app-chat-panel>
+  </div>
+</div>
