--- a/diplom/diplomm/src/app/app.component.html
+++ b/diplom/diplomm/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="app-container">
   <app-header></app-header>
+  
   <div class="main-content">
-    <app-chat-panel></app-chat-panel>
+    <app-chat-panel class="chat-panel"></app-chat-panel>
+    <app-chat-window class="chat-window"></app-chat-window>
   </div>
 </div>
