--- a/diplom/diplomm/src/app/header/header.component.html
+++ b/diplom/diplomm/src/app/header/header.component.html
@@ -1,3 +1,14 @@
 <header class="header">
-  <h1 class="title">ChatMessage</h1>
+  <div class="header-content">
+    <h1 class="title">ChatMessage</h1>
+    
+    <div class="header-actions">
+      <button class="header-btn" title="Notifications">
+        🔔
+      </button>
+      <button class="header-btn" title="Settings">
+        ⚙️
+      </button>
+    </div>
+  </div>
 </header>
