--- a/diplom/diplomm/src/app/chat-window/chat-window.component.html
+++ b/diplom/diplomm/src/app/chat-window/chat-window.component.html
@@ -1,4 +1,4 @@
-<div class="chat-window" *ngIf="selectedChat">
+<div class="chat-window" *ngIf="selectedChat;">
   <!-- Заголовок чата -->
   <div class="chat-header">
     <div class="chat-info">
@@ -29,22 +29,27 @@
 
   <div class="messages-container" #messagesContainer>
     <div class="messages">
-
       <div class="date-divider" *ngIf="messages.length > 0">
         <span>{{ isTodayMessage(messages[0].time) ? 'Today' : 'Yesterday' }}</span>
       </div>
 
+      <!-- Сообщения -->
       <div *ngFor="let message of messages; let i = index" 
            class="message-wrapper"
            [class.outgoing]="message.isOutgoing"
-           [class.with-avatar]="!message.isOutgoing && shouldShowAvatar(i)">
+           [class.with-avatar]="!message.isOutgoing && shouldShowAvatar(i)"
+           [class.deleting]="getMessageClass(message.id || '') === 'deleting'"
+           (mouseenter)="onMessageMouseEnter(message.id || '')"
+           (mouseleave)="onMessageMouseLeave()">
         
         <div class="message-avatar" *ngIf="!message.isOutgoing && shouldShowAvatar(i)">
           <img [src]="selectedChat.avatar" [alt]="selectedChat.name" />
         </div>
 
+        <div class="avatar-placeholder" *ngIf="message.isOutgoing"></div>
+
         <div class="message" [class.with-avatar]="!message.isOutgoing && shouldShowAvatar(i)">
-          <div class="sender-name" *ngIf="!message.isOutgoing && message.senderName">
+          <div class="sender-name" *ngIf="!message.isOutgoing && message.senderName && shouldShowAvatar(i)">
             {{ message.senderName }}
           </div>
 
@@ -55,6 +60,16 @@
             </div>
           </div>
         </div>
+
+        <button 
+          class="delete-btn" 
+          *ngIf="shouldShowDeleteButton(message.id || '')"
+          (click)="deleteMessage(message.id || '')"
+          title="Delete message"
+          (mouseenter)="onMessageMouseEnter(message.id || '')"
+        >
+          🗑️
+        </button>
       </div>
     </div>
   </div>
@@ -72,7 +87,7 @@
     <div class="input-wrapper">
       <textarea 
         class="message-input" 
-        placeholder="Type a message..."
+        placeholder="Напишите что нибудь..."
         [(ngModel)]="newMessage"
         (keydown)="onKeyPress($event)"
         rows="1"
