--- a/diplom/diplomm/src/app/chat-window/chat-window.component.html
+++ b/diplom/diplomm/src/app/chat-window/chat-window.component.html
@@ -68,6 +68,14 @@
             >
               🗑️
             </button>
+
+            <!-- <button 
+              class="action-btn reply-action-btn" 
+              (click)="startReply(message, $event)"
+              title="Reply to message"
+            >
+              ↩️
+            </button> -->
           </div>
         </div>
       </div>
